иниализация драйвера, загрузка страниц